--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "@vueuse/core": "^9.8.2",
+    "firebase": "^9.15.0",
+    "node-loader": "^2.0.0",
     "pinia": "^2.0.28",
+    "sass-loader": "^13.2.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
     "vite": "^4.0.0"
   }
 }
