--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "push": "sh gitpush.sh"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.5",
     "@vueuse/core": "^9.8.2",
     "firebase": "^9.15.0",
     "node-loader": "^2.0.0",
