--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.5",
     "@vueuse/core": "^9.8.2",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "firebase": "^9.15.0",
     "node-loader": "^2.0.0",
     "pinia": "^2.0.28",
