--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.5",
+    "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.8.2",
     "@vueuse/motion": "^2.0.0-beta.12",
     "firebase": "^9.15.0",
