--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "sh deploy.sh",
-    "push": "sh gitpush.sh"
+    "git": "sh gitpush.sh"
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.5",
