--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^9.8.2",
     "@vueuse/motion": "^2.0.0-beta.12",
     "firebase": "^9.15.0",
+    "gsap": "^3.11.4",
     "node-loader": "^2.0.0",
     "pinia": "^2.0.28",
     "sass-loader": "^13.2.0",
